# CLearning

./: .gitignore
CLearning.si4project/: CLearning.SearchResults  CLearning.sip_sym  CLearning.sip_xab  CLearning.sip_xad  CLearning.sip_xc  CLearning.sip_xf  CLearning.sip_xm  CLearning.sip_xr  CLearning.sip_xsb  CLearning.sip_xsd  CLearning.siproj  CLearning.siwork
EmbeddedLinuxC_Learning/: Lesson  Lesson.c  Lesson.c~
SPC code/: .project  AAA.mcpigroup  ADC.asm  ADC.c  ADC.c.ini  ADC.cp  ADC.cp.ini  ADC.h  ADC.h.ini  ADC.mcl  Calibration.asm  Calibration.c  Calibration.c.ini  Calibration.cp  Calibration.h  Calibration.h.ini  Calibration.mcl  Copy of Spcsystem.c  Copy of Spcsystem.c.ini  DPC code V1.0.hex  EEPROM.asm  EEPROM.c  EEPROM.cp  EEPROM.cp.ini  EEPROM.h  EEPROM.h.ini  EEPROM.mcl  I2C.asm  I2C.c  I2C.c.ini  I2C.cp  I2C.h  I2C.mcl  M0220.asm  M0220.c  M0220.c.ini  M0220.cp  M0220.cp.ini  M0220.h  M0220.mcl  (+158 more)
STM32/: .STM32Ram.conf.swp  .gitignore  EEPROM_ID.txt  FreeRTOS_IAP_Jump.c  STM32Ram.conf  SpcMenuStruct.xlsx  dfu_comm.txt
Tiny210/: formatSD.sh  lowlevel_init.S  mmc_relocate.c  s5p_goni.h  start.S  tiny210SD.sh  toolchain_32bit_fix  uboot_board_name  ubootadapt  update_uboot.sh  (+1 more)
spc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  spc  test
spc++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  spc
spc++/inc/: engin.hpp  helper.hpp  state.hpp
spc++/src/: engin.cc  helper.cc  main.cc  state.cc
spc/inc/: spccommon.h  spcconst.h  spcinit.h
spc/src/: main.c  spcalarm.c  spcdip.c  spcinit.c  spclist.c
(+1526 files in other folders)
